fixed section title box being too low

--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -28,7 +28,6 @@
 		}
 		cursor: pointer;
 		&.only-title {
-			margin-bottom: 0;
 			padding: 0;
 			border: none;
 			padding-left: 12px;
